updated openpose dockerfile

--- a/openpose/Dockerfile
+++ b/openpose/Dockerfile
@@ -1,19 +1,30 @@
-FROM nvidia/cuda:8.0-cudnn5-devel   
-# start with the nvidia container for cuda 8 with cudnn 5
+# https://hub.docker.com/r/cwaffles/openpose
+FROM nvidia/cuda:10.0-cudnn7-devel
 
-LABEL maintainer "Michael Sobrepera <mjsobrep@live.com>"
+#get deps
+RUN apt-get update && \
+DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
+python3-dev python3-pip git g++ wget make libprotobuf-dev protobuf-compiler libopencv-dev \
+libgoogle-glog-dev libboost-all-dev libcaffe-cuda-dev libhdf5-dev libatlas-base-dev python3-setuptools
 
-RUN apt-get update -y && apt-get upgrade -y
-RUN apt-get install wget unzip lsof apt-utils lsb-core -y
-RUN apt-get install libatlas-base-dev -y
-RUN apt-get install libopencv-dev python-opencv python-pip -y   
+#for python api
+RUN pip3 install --upgrade pip
+RUN pip3 install numpy opencv-python tqdm scipy matplotlib
 
-RUN wget https://github.com/CMU-Perceptual-Computing-Lab/openpose/archive/master.zip; \
-    unzip master.zip; rm master.zip
+#replace cmake as old version has CUDA variable bugs
+RUN wget https://github.com/Kitware/CMake/releases/download/v3.16.0/cmake-3.16.0-Linux-x86_64.tar.gz && \
+tar xzf cmake-3.16.0-Linux-x86_64.tar.gz -C /opt && \
+rm cmake-3.16.0-Linux-x86_64.tar.gz
+ENV PATH="/opt/cmake-3.16.0-Linux-x86_64/bin:${PATH}"
 
-WORKDIR openpose-master
-RUN sed -i 's/\<sudo chmod +x $1\>//g' ubuntu/install_caffe_and_openpose_if_cuda8.sh; \
-    sed -i 's/\<sudo chmod +x $1\>//g' ubuntu/install_openpose_if_cuda8.sh; \
-    sed -i 's/\<sudo -H\>//g' 3rdparty/caffe/install_caffe_if_cuda8.sh; \
-    sed -i 's/\<sudo\>//g' 3rdparty/caffe/install_caffe_if_cuda8.sh; \
-    sync; sleep 1; ./ubuntu/install_caffe_and_openpose_if_cuda8.sh
+#get openpose
+WORKDIR /openpose
+RUN git clone --depth 1 https://github.com/CMU-Perceptual-Computing-Lab/openpose.git .
+
+#build it
+WORKDIR /openpose/build
+RUN cmake -DBUILD_PYTHON=ON -DBUILD_EXAMPLES=ON .. && make -j `nproc`
+
+WORKDIR /openpose
+
+CMD /bin/bash -c "find /data/* -exec sh -c echo 'working on {}' \; -exec ./build/examples/openpose/openpose.bin --video {} --write_json {}-json/ --write_video {}-out.avi --display 0 \;"
